Website changes - Added brief description

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang=en>
 <link href=data:, rel=icon>
-<title>Welcome</title>
+<title>ERROR</title>
 <meta charset=utf-8>
 <meta name=Description content="A personal website">
 <meta name=viewport content="width=device-width,initial-scale=1">
@@ -43,13 +43,6 @@ pre {
         <pre style="top:0;position:sticky;user-select:none;padding-right:64px">
 <a href=/ style="text-decoration:none;color:#06aa00">
 
-     __     ___  _
- \ \   / (_)(_) __ _ _   _
-  \ \ / /| || |/ _` | | | |
-   \ V / | || | (_| | |_| |
-    \_/  |_|/ |\__,_|\__, |
-          |__/       |___/
-
 </a>
 
 <a href=about-me.html>About Me</a>
@@ -67,23 +60,16 @@ pre {
     </div>
     <div class=c><pre>
 
-ABOUT THIS WEBSITE
-________________________________________________________________________________
 
-        I always wanted to make a portfolio, but never got around to make it.
-        Here it is finally.
-        I wanted a raw them, and what can we more raw than the orignal terminal theme. Ties us back to the old
-        CS days, and shows us how far we have come. There is not a lot on this site. Currently its a work in progress.
-        Its static mostly, and i plan to add few more pages about my interests and career as the project progresses.
-        Coming to the intent behind this site, it is a sneak peek in my world.
-        On this website, you will find what i have done, what i am doing and what i intend to do in future.
-        My Linkedin profile is linked, in case you need to contact me.
+                            j88D   .d88b.    j88D
+                           j8~88  .8P  88.  j8~88
+                          j8' 88  88  d'88 j8' 88
+                          V88888D 88 d' 88 V88888D
+                              88  `88  d8'     88
+                              VP   `Y88P'      VP
+
+                               PAGE NOT FOUND.
 
 
-________________________________________________________________________________
 
-Vijay Attri (c) now - End of times
-</pre>
-    </div>
-</div>
-
+</pre></div></div>
