--- a/about-me.html
+++ b/about-me.html
@@ -63,9 +63,10 @@ About Me
 ________________________________________________________________________________
 
 I am a late-20s software professional. I am a tech enthusiast at heart.
-I am a voracious reader and read a lot and like to read non-fiction mostly.
+I am a voracious reader and regular in goodreads annual challenges.
 I love travelling and plan to complete all major backpacking circuits by 30.
-I am always learning new things. Most recently, i am learning Spanish and  Photography.
+I am always learning new things. Most recently, i am learning Spanish and
+Photography.
 
 
 Tech
@@ -82,18 +83,19 @@ I graduated with a Bachelors in Computer Science from NIT Jalandhar in 2016.
 Work
 ________________________________________________________________________________
 
-I interned at ISRO in remote sensing division in Dehradun in 2015. Post that i got placed
-from campus in Jugnoo. I worked on payments and 3P payments systems integration for
-Jugnoo app.
+I interned at ISRO in remote sensing division in Dehradun in 2015. Post that i
+got placed from campus in Jugnoo. I worked on payments and 3P payments systems
+integration for Jugnoo app.
 Later i moved to Paytm Mall. I worked in Catalog team that was responsible for
 creating and maintaining the 20 million item strong catalog on Paytm Mall.
-I got valuable experience in dealing with low latency pipelines, optimising at scale
-and delivering mission critical fixes.
+I got valuable experience in dealing with low latency pipelines, optimising at
+scale and delivering mission critical fixes.
 Later i decided to move to Amazon. I worked for a year in Prime Tech where
 I worked on accounting systems for new marketplace launches for Prime.
-I also briefly worked in Prime Video, where i was part of Live sports team. I got first hand
-experience of real time engineering at amazon scale. Also found insights on designing
-a system frugally while serving traffic at Amazon PV scale.
+I also briefly worked in Prime Video, where i was part of Live sports team.
+I got first hand experience of real time engineering at amazon scale. Also
+found insights on designing a system frugally while serving traffic at Amazon
+PV scale.
 
 Current
 ________________________________________________________________________________
