--- a/index.html
+++ b/index.html
@@ -70,14 +70,16 @@ pre {
 ABOUT THIS WEBSITE
 ________________________________________________________________________________
 
-        I always wanted to make a portfolio, but never got around to make it.
-        Here it is finally.
-        I wanted a raw them, and what can we more raw than the orignal terminal theme. Ties us back to the old
-        CS days, and shows us how far we have come. There is not a lot on this site. Currently its a work in progress.
-        Its static mostly, and i plan to add few more pages about my interests and career as the project progresses.
-        Coming to the intent behind this site, it is a sneak peek in my world.
-        On this website, you will find what i have done, what i am doing and what i intend to do in future.
-        My Linkedin profile is linked, in case you need to contact me.
+I always wanted to make a portfolio, but never got around to make it.
+Here it is finally.
+I wanted a raw them, and what can we more raw than the orignal terminal theme.
+Ties us back to the old CS days, and shows us how far we have come.
+There is not a lot on this site and currently its a work in progress.
+Its static mostly, and i plan to add few more pages about my interests
+and career as the project progresses.
+Coming to the intent behind this site, it is a sneak peek in my world.
+On this website, you will find what i have done, what i am doing and
+what i intend to do in future.
 
 
 ________________________________________________________________________________
