--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@ pre {
 
 <a href=https://www.goodreads.com/user/show/75062103-vijay>Goodreads</a>
 
-<a href=https://www.linkedin.com/in/vijay-kumar-attri-9ba925a4/>Linkedinn</a>
+<a href=https://www.linkedin.com/in/vijay-kumar-attri-9ba925a4/>Linkedin</a>
 
 
 </pre>
