--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ ________________________________________________________________________________
 
 I always wanted to make a portfolio, but never got around to make it.
 Here it is finally.
-I wanted a raw them, and what can be more raw than the original terminal
+I wanted a raw theme, and what can be more raw than the original terminal
 theme.Ties us back to the old CS days, and shows us how far we have come.
 There is not a lot on this site and currently its a work in progress.
 Its static mostly, and i plan to add more pages about my interests
